tests/paczka1/small_fuzzy/38326425.err
Error in line 2: F58 A773 41,4
Error in line 4: F58 S442 69,9
Error in line 9: eOpkmM S350 74,2
Error in line 5: F58 A773 14,6
Error in line 14: rEfVhµqKq S350 95,8
